@@ -1,5 +1,9 @@
 # $Id$
 
+2006-10-06	Anton E. Lebedevich
+
+	* main/Base/ObjectsTree.class.php: removed.
+
 2006-10-06	Konstantin V. Arkhipov
 
 	* meta/classes/MetaConfiguration.class.php: added ability to override
